--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:b0c6a658d01d6cf91ca4bda2b7a0cf801dc5ce935d20efc971328fac55e68e77
-size 100
+{
+  "dependencies": {
+    "app-store-scraper": "^0.17.0",
+    "google-play-scraper": "^9.1.1"
+  }
+}
